fix hero content wrap heighgt

--- a/src/styles/_hero.less
+++ b/src/styles/_hero.less
@@ -7,7 +7,7 @@
   overflow: hidden;
 
   .hero-content-wrap {
-    height: 82vh;
+    height: 42.1875rem;
     display: flex;
     align-items: flex-end;
     padding-bottom: 0;
