--- a/src/styles/_responsive.less
+++ b/src/styles/_responsive.less
@@ -108,7 +108,7 @@
 
 @media (min-width: 1900px) {
   html {
-    font-size: 21px;
+    font-size: 20px;
   }
 }
 
