--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1775,7 +1775,7 @@ body.search-is-open {
   overflow: hidden;
 }
 .hero .hero-content-wrap {
-  height: 82vh;
+  height: 42.1875rem;
   display: flex;
   align-items: flex-end;
   padding-bottom: 0;
@@ -6624,7 +6624,7 @@ body:has(.internal-content-single) .hero-internal-title {
 }
 @media (min-width: 1900px) {
   html {
-    font-size: 21px;
+    font-size: 20px;
   }
 }
 @media (min-width: 1900px) and (max-width: 2499px) {
